examples/Grammar2Model.examples.ABNF2MModel/files/gen/ABNFParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 ABNF.g 2016-09-02 13:02:04

	import gts.modernization.model.CST.impl.*;
	import gts.modernization.model.CST.*;
	import java.util.Iterator;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;
import java.util.HashMap;
public class ABNFParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DOUBLEARROW", "ARROW", "ID", "ABSTRACT", "WS", "';'", "'['", "'<'", "':'", "'>'", "'*'", "'+'", "'?'", "']'"
    };
    public static final int T__9=9;
    public static final int ABSTRACT=7;
    public static final int ARROW=5;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int DOUBLEARROW=4;
    public static final int T__14=14;
    public static final int ID=6;
    public static final int WS=8;
    public static final int EOF=-1;
    public static final int T__10=10;

    // delegates
    // delegators


        public ABNFParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public ABNFParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected StringTemplateGroup templateLib =
      new StringTemplateGroup("ABNFParserTemplates", AngleBracketTemplateLexer.class);

    public void setTemplateLib(StringTemplateGroup templateLib) {
      this.templateLib = templateLib;
    }
    public StringTemplateGroup getTemplateLib() {
      return templateLib;
    }
    /** allows convenient multi-value initialization:
     *  "new STAttrMap().put(...).put(...)"
     */
    public static class STAttrMap extends HashMap {
      public STAttrMap put(String attrName, Object value) {
        super.put(attrName, value);
        return this;
      }
      public STAttrMap put(String attrName, int value) {
        super.put(attrName, new Integer(value));
        return this;
      }
    }

    public String[] getTokenNames() { return ABNFParser.tokenNames; }
    public String getGrammarFileName() { return "ABNF.g"; }


    public static class abnf_definition_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "abnf_definition"
    // ABNF.g:18:1: abnf_definition returns [Node returnNode] : (ruleGen+= rule )* ;
    public final ABNFParser.abnf_definition_return abnf_definition() throws RecognitionException {
        ABNFParser.abnf_definition_return retval = new ABNFParser.abnf_definition_return();
        retval.start = input.LT(1);

        List list_ruleGen=null;
        RuleReturnScope ruleGen = null;
        try {
            // ABNF.g:19:1: ( (ruleGen+= rule )* )
            // ABNF.g:19:3: (ruleGen+= rule )*
            {
            // ABNF.g:19:10: (ruleGen+= rule )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==ID) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // ABNF.g:0:0: ruleGen+= rule
            	    {
            	    pushFollow(FOLLOW_rule_in_abnf_definition46);
            	    ruleGen=rule();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if (list_ruleGen==null) list_ruleGen=new ArrayList();
            	    list_ruleGen.add(ruleGen.getTemplate());


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            if ( state.backtracking==0 ) {

              		// Create return CST Node
              		Node abnf_definitionReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
              		abnf_definitionReturnNode.setKind("abnf_definition");
              	    // Create a CST Node
              		if(list_ruleGen != null) {
              	        for(Iterator it = list_ruleGen.iterator(); it.hasNext(); )  { 
              	            ABNFParser.rule_return r = (ABNFParser.rule_return) it.next(); 
              	            if(r != null && r.returnNode != null) {
              	            	r.returnNode.setKind("rule");
              	            	abnf_definitionReturnNode.getChildren().add(r.returnNode);
              	            } 
              	        }
              	    }
              		// Returns the Node with CST Leaves/Nodes
              		retval.returnNode = abnf_definitionReturnNode;
              	
            }

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "abnf_definition"

    public static class rule_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "rule"
    // ABNF.g:39:1: rule returns [Node returnNode] : (hierarchy_ruleGen+= hierarchy_rule | specification_ruleGen+= specification_rule );
    public final ABNFParser.rule_return rule() throws RecognitionException {
        ABNFParser.rule_return retval = new ABNFParser.rule_return();
        retval.start = input.LT(1);

        List list_hierarchy_ruleGen=null;
        List list_specification_ruleGen=null;
        RuleReturnScope hierarchy_ruleGen = null;
        RuleReturnScope specification_ruleGen = null;
        try {
            // ABNF.g:40:1: (hierarchy_ruleGen+= hierarchy_rule | specification_ruleGen+= specification_rule )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==ID) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==DOUBLEARROW) ) {
                    alt2=1;
                }
                else if ( (LA2_1==ARROW) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // ABNF.g:40:3: hierarchy_ruleGen+= hierarchy_rule
                    {
                    pushFollow(FOLLOW_hierarchy_rule_in_rule69);
                    hierarchy_ruleGen=hierarchy_rule();

                    state._fsp--;
                    if (state.failed) return retval;
                    if (list_hierarchy_ruleGen==null) list_hierarchy_ruleGen=new ArrayList();
                    list_hierarchy_ruleGen.add(hierarchy_ruleGen.getTemplate());

                    if ( state.backtracking==0 ) {

                      		// Create return CST Node
                      		Node ruleReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		ruleReturnNode.setKind("rule");
                      	    // Create a CST Node
                      		if(list_hierarchy_ruleGen != null) {
                      	        for(Iterator it = list_hierarchy_ruleGen.iterator(); it.hasNext(); )  { 
                      	            ABNFParser.hierarchy_rule_return r = (ABNFParser.hierarchy_rule_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("hierarchy_rule");
                      	            	ruleReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = ruleReturnNode;
                      	
                    }

                    }
                    break;
                case 2 :
                    // ABNF.g:58:4: specification_ruleGen+= specification_rule
                    {
                    pushFollow(FOLLOW_specification_rule_in_rule80);
                    specification_ruleGen=specification_rule();

                    state._fsp--;
                    if (state.failed) return retval;
                    if (list_specification_ruleGen==null) list_specification_ruleGen=new ArrayList();
                    list_specification_ruleGen.add(specification_ruleGen.getTemplate());

                    if ( state.backtracking==0 ) {

                      		// Create return CST Node
                      		Node ruleReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
                      		ruleReturnNode.setKind("rule");
                      	    // Create a CST Node
                      		if(list_specification_ruleGen != null) {
                      	        for(Iterator it = list_specification_ruleGen.iterator(); it.hasNext(); )  { 
                      	            ABNFParser.specification_rule_return r = (ABNFParser.specification_rule_return) it.next(); 
                      	            if(r != null && r.returnNode != null) {
                      	            	r.returnNode.setKind("specification_rule");
                      	            	ruleReturnNode.getChildren().add(r.returnNode);
                      	            } 
                      	        }
                      	    }
                      		// Returns the Node with CST Leaves/Nodes
                      		retval.returnNode = ruleReturnNode;
                      	
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "rule"

    public static class hierarchy_rule_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "hierarchy_rule"
    // ABNF.g:78:1: hierarchy_rule returns [Node returnNode] : classIdGen+= classId (DOUBLEARROWGen= DOUBLEARROW subclassIdGen+= subclassId )+ TK_0= ';' ;
    public final ABNFParser.hierarchy_rule_return hierarchy_rule() throws RecognitionException {
        ABNFParser.hierarchy_rule_return retval = new ABNFParser.hierarchy_rule_return();
        retval.start = input.LT(1);

        Token DOUBLEARROWGen=null;
        Token TK_0=null;
        List list_classIdGen=null;
        List list_subclassIdGen=null;
        RuleReturnScope classIdGen = null;
        RuleReturnScope subclassIdGen = null;
        try {
            // ABNF.g:79:1: (classIdGen+= classId (DOUBLEARROWGen= DOUBLEARROW subclassIdGen+= subclassId )+ TK_0= ';' )
            // ABNF.g:79:4: classIdGen+= classId (DOUBLEARROWGen= DOUBLEARROW subclassIdGen+= subclassId )+ TK_0= ';'
            {
            pushFollow(FOLLOW_classId_in_hierarchy_rule102);
            classIdGen=classId();

            state._fsp--;
            if (state.failed) return retval;
            if (list_classIdGen==null) list_classIdGen=new ArrayList();
            list_classIdGen.add(classIdGen.getTemplate());

            // ABNF.g:79:24: (DOUBLEARROWGen= DOUBLEARROW subclassIdGen+= subclassId )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==DOUBLEARROW) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // ABNF.g:79:25: DOUBLEARROWGen= DOUBLEARROW subclassIdGen+= subclassId
            	    {
            	    DOUBLEARROWGen=(Token)match(input,DOUBLEARROW,FOLLOW_DOUBLEARROW_in_hierarchy_rule107); if (state.failed) return retval;
            	    pushFollow(FOLLOW_subclassId_in_hierarchy_rule111);
            	    subclassIdGen=subclassId();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if (list_subclassIdGen==null) list_subclassIdGen=new ArrayList();
            	    list_subclassIdGen.add(subclassIdGen.getTemplate());


            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);

            TK_0=(Token)match(input,9,FOLLOW_9_in_hierarchy_rule117); if (state.failed) return retval;
            if ( state.backtracking==0 ) {

              		// Create return CST Node
              		Node hierarchy_ruleReturnNode = CSTFactoryImpl.eINSTANCE.createNode();
              		hierarchy_ruleReturnNode.setKind("hierarchy_rule");
              	    // Create a CST Node
              		if(list_classIdGen != null) {
              	        for(Iterator it = list_classIdGen.iterator(); it.hasNext(); )  { 
              	            ABNFParser.classId_return r = (ABNFParser.classId_return) it.next(); 
              	            if(r != null && r.returnNode != null) {
              	            	r.returnNode.setKind("classId");
              	            	hierarchy_ruleReturnNode.getChildren().add(r.returnNode);
              	            } 
              	        }
              	    }

              		// Create a special CST Node for terminal subclassIdGen aggregation
              		if(list_subclassIdGen != null) {
              	    for(int pos = 0; pos < list_subclassIdGen.size(); pos++ )  { 
              	    // Create a CST Leaf
              		if(DOUBLEARROWGen != null) {
              			Leaf DOUBLEARROWGenLeaf = CSTFactoryImpl.eINSTANCE.createLeaf();
              			DOUBLEARROWGenLeaf.setKind("DOUBLEARROW");
              			DOUBLEARROWGenLeaf.setValue((DOUBLEARROWGen!=null?DOUBLEARROWGen.getText():null));
              			DOUBLEARROWGenLeaf.setPos(DOUBLEARROWGen.getCharPositionInLine());
              			DOUBLEARROWGenLeaf.setLine(DOUBLEARROWGen.getLine());
              			hierarchy_ruleReturnNode.getChildren().add(DOUBLEARROWGenLeaf);
              		}
              		// No Terminal extractor
              	    if(list_subclassIdGen != null) {		
              	    	ABNFParser.subclassId_return r = (ABNFParser.subclassId_return) list_subclassIdGen.get(pos); 
              	    	if(r != null && r.returnNode != null) {
              	        	r.returnNode.setKind("subclassId");
              	    		hierarchy_ruleReturnNode.getChildren().add(r.returnNode);
              	    	} 
              		}
              		}
              		}

              	    // Create a Token CST Leaf	
              	    if(TK_0 != null) {
              			Leaf TK_0Leaf = CSTFactoryImpl.eINSTANCE.createLeaf();
              	 		TK_0Leaf.setKind("TOKEN");
              	 		TK_0Leaf.setValue((TK_0!=null?TK_0.getText():null));
              			TK_0Leaf.setPos(TK_0.getCharPositionInLine());
              			TK_0Leaf.setLine(TK_0.getLine());
              	 		hierarchy_ruleReturnNode.getChildren().add(TK_0Leaf);
              	 	}
              		// Returns the Node with CST Leaves/Nodes
              		retval.returnNode = hierarchy_ruleReturnNode;
              	
            }

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "hierarchy_rule"

    public static class specification_rule_return extends ParserRuleReturnScope {
        public Node returnNode;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "specification_rule"
    // ABNF.g:132:1: specification_rule returns [Node returnNode] : classIdGen+= classId ARROWGen= ARROW (attributeGen+= attribute )* TK_0= ';' ;
    public final ABNFParser.specification_rule_return specification_rule() throws RecognitionException {
        ABNFParser.specification_rule_return retval = new ABNFParser.specification_rule_return();
        retval.start = input.LT(1);

        Token ARROWGen=null;
        Token TK_0=null;
        List list_classIdGen=null;
        List list_attributeGen=null;
        RuleReturnScope classIdGen = null;
        RuleReturnScope attributeGen = null;
        try {
            // ABNF.g:133:1: (classIdGen+= classId ARROWGen= ARROW (attributeGen+= attribute )* TK_0= ';' )
            // ABNF.g:133:4: classIdGen+= classId ARROWGen= ARROW (attributeGen+= attribute )* TK_0= ';'
            {
            pushFollow(FOLLOW_classId_in_specification_rule139);
            classIdGen=classId();

            state._fsp--;
            if (state.failed) return retval;
            if (list_classIdGen==null) list_classIdGen=new ArrayList();
            list_classIdGen.add(classIdGen.getTemplate());

            ARROWGen=(Token)match(input,ARROW,FOLLOW_ARROW_in_specification_rule143); if (state.failed) return retval;
            // ABNF.g:133:51: (attributeGen+= attribute )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==ID||(LA4_0>=10 && LA4_0<=11)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // ABNF.g:0:0: attributeGen+= attribute
            	    {
            	    pushFollow(FOLLOW_attribute_in_specification_rule147);
            	    attributeGen=attribute();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if (list_attributeGen==null) list_attributeGen=new ArrayList();
            	    list_attributeGen.add(attributeGen.getTemplate());


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            TK_0=(Token)match(input,9,FOLLOW_9_in_specification_rule152); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
